--- a/woocommerce.css
+++ b/woocommerce.css
@@ -5,7 +5,7 @@
   float: right;
   margin: 0 0 0 -25.61404%;
   width: 100%; }
-  .no-active-sidebar.woocommerce-page #container {
+  .no-active-wc-sidebar.woocommerce-page #container {
     float: none;
     margin: 0;
     width: auto; }
@@ -18,7 +18,7 @@
 .woocommerce-page .container #content {
   float: right;
   margin: 0 0 0 25.61404%; }
-  .no-active-sidebar.woocommerce-page #content {
+  .no-active-wc-sidebar.woocommerce-page #content {
     margin: 0; }
   @media (max-width: 768px) {
     .woocommerce-page .container #content {
