--- a/sass/layout/_page-settings.scss
+++ b/sass/layout/_page-settings.scss
@@ -14,10 +14,10 @@
     }
 }
 
-.page-layout-no-masthead-margin .site-content {
-    padding-top: 0;
+.page-layout-no-masthead-margin #masthead {
+	margin-bottom: 0;
 }
 
-.page-layout-no-footer-margin .site-content {
-    padding-bottom: 0;
+.page-layout-no-footer-margin #colophon {
+    margin-top: 0;
 }
