Adjust search results loop bottom margin

--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -403,7 +403,7 @@
 
 	article {
 		@include clearfix;
-		margin-bottom: 3.25em;
+		margin-bottom: 60px;
 
 		@media (max-width: 1024px) {
 			margin-bottom: 1.4667em;
