--- a/woocommerce.css
+++ b/woocommerce.css
@@ -19,15 +19,23 @@
   float: right;
   margin: 0 0 0 25.61404%; }
   .no-active-wc-sidebar.woocommerce-page #content {
-    margin: 0; }
+    float: none;
+    margin: 0;
+    width: auto; }
   @media (max-width: 768px) {
     .woocommerce-page .container #content {
-      margin: 0; } }
+      float: none;
+      margin: 0;
+      width: auto; } }
 
 .woocommerce-page .container .widget-area {
   float: left;
   padding-left: 0;
   padding-right: 40px; }
+  @media (max-width: 768px) {
+    .woocommerce-page .container .widget-area {
+      float: none;
+      padding-right: 0; } }
 
 /*--------------------------------------------------------------
 # WooCommerce Archive
