--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -30,7 +30,7 @@
 	span {
 		color: $color__text-light;
 		@include font-size(0.8);
-		
+
 		@media (max-width: 480px) {
 			@include font-size(0.7333);
 		}
@@ -60,7 +60,7 @@
 	line-height: normal;
 	margin: 0.5em 0 0;
 	text-align: center;
-	
+
 	@media (max-width: 480px) {
 		@include font-size(1.6);
 	}
@@ -136,10 +136,10 @@
 	}
 
 	.page-links-title ~ a span {
-		background: #fff; 
+		background: #fff;
 		border-color: $color__border-button;
 		color: $color__text-medium;
-		
+
 		&:hover {
 			background: $color__primary-accent;
 			border: 1px solid $color__primary-accent;
@@ -198,9 +198,9 @@
 }
 
 .archive .taxonomy-description {
-	margin-top: .4666em; 
+	margin-top: .4666em;
 	text-align: center;
-	
+
 	p:last-of-type,
 	p:only-of-type {
 		margin-bottom: 0;
@@ -292,18 +292,18 @@
 
 			&:first-child {
 				margin-right: 3.5%;
-				
+
 				@media (max-width: 480px) {
-					margin-right: 0; 
+					margin-right: 0;
 				}
 			}
 
 			&:last-child {
 				margin-left: 3.5%;
-				
+
 				@media (max-width: 480px) {
-					margin-left: 0; 
-				}				
+					margin-left: 0;
+				}
 			}
 
 			&:only-child {
@@ -412,7 +412,7 @@
 		.entry-thumbnail {
 			float: left;
 			margin: 0;
-			width: 42.452830188679%;
+			width: 34.452830188679%;
 
 			@media (max-width: 480px) {
 				float: none;
@@ -455,10 +455,11 @@
 			}
 		}
 
-		&.has-post-thumbnail {
+		&.has-post-thumbnail,
+		&.has-fallback-image {
 
 			.entry-content {
-				width: 54.009433962264%;
+				width: 64.009433962264%;
 
 				@media (max-width: 480px) {
 					width: 100%;
