--- a/style.css
+++ b/style.css
@@ -1831,7 +1831,7 @@ a {
   .left-medium-loop article .entry-thumbnail {
     float: left;
     margin: 0;
-    width: 42.452830188679%; }
+    width: 34.452830188679%; }
     @media (max-width: 480px) {
       .left-medium-loop article .entry-thumbnail {
         float: none;
@@ -1861,10 +1861,10 @@ a {
           text-align: center; } }
     .left-medium-loop article .entry-content .entry-summary {
       margin-top: 0.5em; }
-  .left-medium-loop article.has-post-thumbnail .entry-content {
-    width: 54.009433962264%; }
+  .left-medium-loop article.has-post-thumbnail .entry-content, .left-medium-loop article.has-fallback-image .entry-content {
+    width: 64.009433962264%; }
     @media (max-width: 480px) {
-      .left-medium-loop article.has-post-thumbnail .entry-content {
+      .left-medium-loop article.has-post-thumbnail .entry-content, .left-medium-loop article.has-fallback-image .entry-content {
         width: 100%; } }
 
 /*--------------------------------------------------------------
@@ -2311,5 +2311,3 @@ object {
             .flexslider.featured-posts-slider .featured-posts-slides .featured-post-slide .slide-content .entry-button .button, .flexslider.featured-posts-slider .featured-posts-slides .featured-post-slide .slide-content .entry-button #page #infinite-handle span button, #page #infinite-handle span .flexslider.featured-posts-slider .featured-posts-slides .featured-post-slide .slide-content .entry-button button {
               font-size: 11.7328px;
               font-size: 0.7333rem; } }
-
-/*# sourceMappingURL=sass/maps/style.css.map */
