--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -5,10 +5,9 @@
 .hentry {
 }
 
-.page-content,
-.entry-content,
-.entry-summary {
-	margin: 2em 0 0;
+.page-header,
+.page article:first-of-type .entry-header {
+	margin-bottom: 2em; 
 }
 
 .entry {
