--- a/style.css
+++ b/style.css
@@ -1489,10 +1489,9 @@ a {
 .sticky {
   display: block; }
 
-.page-content,
-.entry-content,
-.entry-summary {
-  margin: 2em 0 0; }
+.page-header,
+.page article:first-of-type .entry-header {
+  margin-bottom: 2em; }
 
 .entry {
   margin-bottom: 5em; }
