Used flexslider for gallery format slider

--- a/sass/media/_media.scss
+++ b/sass/media/_media.scss
@@ -28,3 +28,8 @@ object {
 ## Homepage Slider
 --------------------------------------------------------------*/
 @import "home-slider";
+
+/*--------------------------------------------------------------
+## Gallery format Slider
+--------------------------------------------------------------*/
+@import "gallery-slider";
