--- a/woocommerce.css
+++ b/woocommerce.css
@@ -847,3 +847,5 @@
   .woocommerce .widget-area#secondary .widget_layered_nav_filters li a:hover:before {
     background: transparent;
     color: #2d2d2d !important; }
+
+/*# sourceMappingURL=sass/maps/woocommerce.css.map */
