--- a/sass/woocommerce/_archive.scss
+++ b/sass/woocommerce/_archive.scss
@@ -227,18 +227,18 @@
 				border: none;
 				margin-right: 5px;
 
-				a, 
+				a,
 				span {
-					background: #fff; 
+					background: #fff;
 					border: 1px solid $color__border-button;
 					color: $color__text-medium;
-					font-size: 13px; 
+					font-size: 13px;
 					margin-right: 1px;
 					padding: 9px 11px 8px;
 
 					&:hover {
 						background: $color__primary-accent;
-						border-color: $color__primary-accent; 
+						border-color: $color__primary-accent;
 						color: #fff;
 					}
 				}
@@ -256,7 +256,7 @@
 
 				.current {
 					background: $color__primary-accent;
-					border-color: $color__primary-accent; 
+					border-color: $color__primary-accent;
 					color: #fff;
 				}
 
@@ -264,8 +264,15 @@
 				.prev {
 					font-family: $font__details;
 					padding: 9px 9px 8px;
-				}				
+				}
 			}
+		}
+	}
+
+	&.archive {
+		.page-title {
+			font-size: 20px;
+			padding: 40px 0;
 		}
 	}
 }
