Added JS and CSS to Quickview

--- a/sass/woocommerce.scss
+++ b/sass/woocommerce.scss
@@ -31,3 +31,8 @@
 # WooCommerce Widgets
 --------------------------------------------------------------*/
 @import "woocommerce/widgets";
+
+/*--------------------------------------------------------------
+# WooCommerce Quickview
+--------------------------------------------------------------*/
+@import "woocommerce/quickview";
