--- a/woocommerce.css
+++ b/woocommerce.css
@@ -848,4 +848,94 @@
     background: transparent;
     color: #2d2d2d !important; }
 
+/*--------------------------------------------------------------
+# WooCommerce Quickview
+--------------------------------------------------------------*/
+.woocommerce a.product-quick-view-button {
+  margin-right: 1px; }
+
+.woocommerce #quick-view-container {
+  background: rgba(0, 0, 0, 0.5);
+  bottom: 0;
+  display: none;
+  height: 100vh;
+  left: 0;
+  overflow: hidden;
+  position: fixed;
+  right: 0;
+  top: 0;
+  width: 100%;
+  z-index: 99999; }
+  .woocommerce #quick-view-container .quick-view {
+    background: white;
+    bottom: 0;
+    display: inline-block;
+    height: 500px;
+    left: 0;
+    margin: auto;
+    max-width: 1040px;
+    min-width: 300px;
+    overflow: auto;
+    position: absolute;
+    right: 0;
+    top: 0;
+    vertical-align: middle;
+    width: 100%; }
+    @media (max-width: 1100px) {
+      .woocommerce #quick-view-container .quick-view {
+        width: 85%; } }
+  .woocommerce #quick-view-container .quickview-close-icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+    margin: 10px 10px 0 0;
+    color: rgba(0, 0, 0, 0.8);
+    font-size: 1em;
+    cursor: pointer; }
+  .woocommerce #quick-view-container .product-content-wrapper .product-image-wrapper {
+    width: 50%;
+    float: left; }
+    @media (max-width: 600px) {
+      .woocommerce #quick-view-container .product-content-wrapper .product-image-wrapper {
+        width: 100%;
+        float: none; } }
+    .woocommerce #quick-view-container .product-content-wrapper .product-image-wrapper img {
+      vertical-align: middle; }
+  .woocommerce #quick-view-container .product-content-wrapper .product-info-wrapper {
+    width: 50%;
+    float: right;
+    padding: 20px;
+    position: relative; }
+    @media (max-width: 600px) {
+      .woocommerce #quick-view-container .product-content-wrapper .product-info-wrapper {
+        width: 100%;
+        float: none; } }
+    .woocommerce #quick-view-container .product-content-wrapper .product-info-wrapper a {
+      text-decoration: none; }
+    .woocommerce #quick-view-container .product-content-wrapper .product-info-wrapper .price {
+      margin: 0;
+      color: #24c48a;
+      font-family: "Lato", sans-serif;
+      font-size: 1.2em;
+      line-height: 2.5;
+      position: absolute;
+      top: 22px;
+      right: 20px; }
+      .woocommerce #quick-view-container .product-content-wrapper .product-info-wrapper .price del {
+        opacity: 0.5; }
+      .woocommerce #quick-view-container .product-content-wrapper .product-info-wrapper .price ins {
+        background: none; }
+    .woocommerce #quick-view-container .product-content-wrapper .product-info-wrapper .star-rating {
+      float: none; }
+    .woocommerce #quick-view-container .product-content-wrapper .product-info-wrapper .cart {
+      padding-bottom: 20px; }
+      .woocommerce #quick-view-container .product-content-wrapper .product-info-wrapper .cart .quantity {
+        display: inline-block;
+        float: left;
+        margin: -1px 6px 0 0; }
+        .woocommerce #quick-view-container .product-content-wrapper .product-info-wrapper .cart .quantity input {
+          padding: 5px 6px; }
+    .woocommerce #quick-view-container .product-content-wrapper .product-info-wrapper .single_add_to_cart_button {
+      float: left; }
+
 /*# sourceMappingURL=sass/maps/woocommerce.css.map */
