--- a/style.css
+++ b/style.css
@@ -2314,8 +2314,7 @@ object {
 ## Gallery format Slider
 --------------------------------------------------------------*/
 .flexslider.gallery-format-slider {
-  border: none;
-  margin-bottom: 0; }
+  border: none; }
   .flexslider.gallery-format-slider .flex-direction-nav a.flex-prev:before {
     background-color: rgba(0, 0, 0, 0.5);
     background-image: url("images/arrow-left.svg");
@@ -2352,14 +2351,11 @@ object {
       transition: 1s;
       transition-property: opacity;
       width: 40px; }
-  .flexslider.gallery-format-slider .flex-control-nav {
-    position: relative;
-    bottom: 25px; }
-    .flexslider.gallery-format-slider .flex-control-nav li {
-      padding: 0; }
-      .flexslider.gallery-format-slider .flex-control-nav li a {
-        background-color: rgba(255, 255, 255, 0.5);
-        height: 9px;
-        width: 9px; }
-        .flexslider.gallery-format-slider .flex-control-nav li a.flex-active {
-          background-color: rgba(255, 255, 255, 0.9); }
+  .flexslider.gallery-format-slider .flex-control-nav li {
+    padding: 0; }
+    .flexslider.gallery-format-slider .flex-control-nav li a {
+      background-color: rgba(0, 0, 0, 0.5);
+      height: 9px;
+      width: 9px; }
+      .flexslider.gallery-format-slider .flex-control-nav li a.flex-active {
+        background-color: rgba(0, 0, 0, 0.9); }
