Added small gap below the video format video

--- a/sass/media/_media.scss
+++ b/sass/media/_media.scss
@@ -33,3 +33,8 @@ object {
 ## Gallery format Slider
 --------------------------------------------------------------*/
 @import "gallery-slider";
+
+/*--------------------------------------------------------------
+## Video format
+--------------------------------------------------------------*/
+@import "video-format";
