Added margin above and below video format video

--- a/style.css
+++ b/style.css
@@ -2458,4 +2458,4 @@ object {
 ## Video format
 --------------------------------------------------------------*/
 .entry-video {
-  margin-bottom: 35px; }
+  margin: 35px 0; }
