Replaced featured image with first image for image format posts

--- a/sass/media/_media.scss
+++ b/sass/media/_media.scss
@@ -30,11 +30,6 @@ object {
 @import "home-slider";
 
 /*--------------------------------------------------------------
-## Gallery format Slider
+## Post format
 --------------------------------------------------------------*/
-@import "gallery-slider";
-
-/*--------------------------------------------------------------
-## Video format
---------------------------------------------------------------*/
-@import "video-format";
+@import "post-formats";
