--- a/style.css
+++ b/style.css
@@ -2405,7 +2405,7 @@ object {
               font-size: 0.7333rem; } }
 
 /*--------------------------------------------------------------
-## Gallery format Slider
+## Post format
 --------------------------------------------------------------*/
 .flexslider.gallery-format-slider {
   border: none; }
@@ -2454,8 +2454,6 @@ object {
       .flexslider.gallery-format-slider .flex-control-nav li a.flex-active {
         background-color: rgba(0, 0, 0, 0.7); }
 
-/*--------------------------------------------------------------
-## Video format
---------------------------------------------------------------*/
-.entry-video {
+.entry-video,
+.entry-image {
   margin: 35px 0; }
