--- a/sass/woocommerce/_archive.scss
+++ b/sass/woocommerce/_archive.scss
@@ -97,10 +97,11 @@
 
 	.woocommerce-result-count {
 		color: $color__text-medium;
-		font-size: 13px;
+		font-size: 14px;
 	}
 
 	ul.products {
+
 		li.product {
 			margin: 0 0 25px 0;
 			width: 100%;
@@ -113,30 +114,31 @@
 				margin: 0 0 25px 1%;
 			}
 
-			@media ( min-width: 321px ) {
-				margin: 0 1% 35px 1%;
+			@media (min-width: 321px) {
+				margin: 0 1% 27px 1%;
 				width: 31.333%;
 
 				&.first {
-					margin: 0 2% 35px 0;
+					margin: 0 2% 27px 0;
 				}
 
 				&.last {
-					margin: 0 0 35px 2%;
+					margin: 0 0 27px 2%;
 				}
 			}
 
 			span.onsale {
 				background-color: $color__primary-accent;
 				border-radius: 0;
-				font-size: 11px;
+				font-family: $font__details; 
+				font-size: 12px;
 				left: 0;
 				right: auto;
 				line-height: normal;
 				min-height: 0;
-				padding: 5px 13px;
+				padding: 6px 12px;
 				text-transform: uppercase;
-				top: 5px;
+				top: 6px;
 				z-index: 10;
 			}
 
@@ -145,7 +147,13 @@
 			}
 
 			h3 {
+				font-size: 14px;
+				padding: 17px 0 0; 
 				text-align: center;
+				
+				&:hover {
+					color: $color__text-medium;
+				}
 			}
 
 			.price {
@@ -168,6 +176,7 @@
 				background: $color__primary-accent-dark;
 
 				&:hover {
+
 					img {
 						opacity: 0.25;
 					}
@@ -182,20 +191,20 @@
 				.add_to_cart_button,
 				.product-quick-view-button {
 					border-radius: 0;
-					font-size: 12px;
+					font-size: 13px;
 					left: 50%;
 					margin: 0;
 					opacity: 0;
 					padding: 12px 15px;
 					position: absolute;
-					visibility: hidden;
 					@include transform( translateX( -50% ) );
+					visibility: hidden;
 				}
 
 				.add_to_cart_button {
 					background: #fff;
 					border: 2px solid #fff;
-					bottom: 20%;
+					bottom: 90px;
 					color: $color__text-dark;
 
 					&:hover {
@@ -207,7 +216,7 @@
 					background: transparent;
 					border: 2px solid #fff;
 					color: #fff;
-					top: 20%;
+					top: 100px;
 
 					&:hover {
 						background: #fff;
@@ -270,8 +279,9 @@
 	}
 
 	&.archive {
+
 		.page-title {
-			font-size: 20px;
+			font-size: 24px;
 			padding: 40px 0;
 		}
 	}
