--- a/sass/media/_post-formats.scss
+++ b/sass/media/_post-formats.scss
@@ -1,4 +1,6 @@
-// Gallery Format
+/*--------------------------------------------------------------
+## Gallery Format
+--------------------------------------------------------------*/
 .flexslider.gallery-format-slider {
 	border: none;
 
@@ -59,6 +61,7 @@
 	}
 
 	.flex-control-nav {
+		
 		li {
 			padding: 0;
 
@@ -75,8 +78,10 @@
 	}
 }
 
-// Video and Image Format
+/*--------------------------------------------------------------
+## Video and Image Format
+--------------------------------------------------------------*/
 .entry-video,
 .entry-image {
-	margin: 35px 0;
+	margin: 0 0 35px;
 }
