--- a/style.css
+++ b/style.css
@@ -1551,7 +1551,7 @@ a {
   font-size: 34.1328px;
   font-size: 2.1333rem;
   line-height: normal;
-  margin: 0.5em 0 0;
+  margin: 0.5em 0 35px;
   text-align: center; }
   @media (max-width: 480px) {
     .entry-title {
@@ -1566,7 +1566,7 @@ a {
       color: #626262; }
 
 .entry-thumbnail {
-  margin: 35px 0; }
+  margin: 0 0 35px; }
   .entry-thumbnail img {
     max-width: 100%;
     vertical-align: middle; }
@@ -2407,6 +2407,9 @@ object {
 /*--------------------------------------------------------------
 ## Post format
 --------------------------------------------------------------*/
+/*--------------------------------------------------------------
+## Gallery Format
+--------------------------------------------------------------*/
 .flexslider.gallery-format-slider {
   border: none; }
   .flexslider.gallery-format-slider .flex-direction-nav a.flex-prev:before {
@@ -2454,8 +2457,11 @@ object {
       .flexslider.gallery-format-slider .flex-control-nav li a.flex-active {
         background-color: rgba(0, 0, 0, 0.7); }
 
+/*--------------------------------------------------------------
+## Video and Image Format
+--------------------------------------------------------------*/
 .entry-video,
 .entry-image {
-  margin: 35px 0; }
+  margin: 0 0 35px; }
 
 /*# sourceMappingURL=sass/maps/style.css.map */
