Change nav arrows to Verdana

--- a/sass/navigation/_menus.scss
+++ b/sass/navigation/_menus.scss
@@ -335,6 +335,7 @@ $sel: '';
 		width: 50%;
 
 		span {
+			font-family: Verdana, Geneva, sans-serif; 
 			margin-right: .2em;
 		}
 	}
@@ -346,6 +347,7 @@ $sel: '';
 		width: 50%;
 
 		span {
+			font-family: Verdana, Geneva, sans-serif; 
 			margin-left: .2em;
 		}
 	}
