--- a/sass/woocommerce/_archive.scss
+++ b/sass/woocommerce/_archive.scss
@@ -271,7 +271,7 @@
 
 				.next,
 				.prev {
-					font-family: $font__details;
+					font-family: Verdana, Geneva, sans-serif; 
 					padding: 9px 9px 8px;
 				}
 			}
