Revert WooCommerce archive button positions

--- a/sass/woocommerce/_archive.scss
+++ b/sass/woocommerce/_archive.scss
@@ -204,7 +204,7 @@
 				.add_to_cart_button {
 					background: #fff;
 					border: 2px solid #fff;
-					bottom: 90px;
+					bottom: 20%;
 					color: $color__text-dark;
 
 					&:hover {
@@ -216,7 +216,7 @@
 					background: transparent;
 					border: 2px solid #fff;
 					color: #fff;
-					top: 100px;
+					top: 20%;
 
 					&:hover {
 						background: #fff;
