--- a/sass/woocommerce/_product.scss
+++ b/sass/woocommerce/_product.scss
@@ -3,12 +3,14 @@
 	span.onsale {
 		background-color: $color__primary-accent;
 		border-radius: 0;
-		left: 4px;
+		font-family: $font__details;
+		left: 0;
 		line-height: normal;
+		margin: 0;
 		min-height: 0;
 		padding: 6px 15px;
 		text-transform: uppercase;
-		top: 4px;
+		top: 0;
 		z-index: 10;
 	}
 
@@ -16,17 +18,31 @@
 		margin-top: 0;
 
 		.product_title {
-			font-size: 30px;
+			font-size: 24px;
 			text-align: left;
-			margin: 20px 0;
+			margin: 20px 0 0;
 		}
 
 		.woocommerce-product-rating {
-			margin-bottom: 0;
+			margin-bottom: 20px;
+			
+			.woocommerce .star-rating {
+				font-size: 14px; 
+			}
+			
+			.woocommerce-review-link {
+				color: $color__text-light; 
+				font-size: 13px;
+				
+				&:hover {
+					color: $color__primary-accent; 
+				}
+			}
 		}
 
 		.price {
-			font-size: 20px;
+			font-size: 24px;
+			line-height: normal;
 			margin-bottom: 15px;
 
 			del,
@@ -40,8 +56,8 @@
 			}
 		}
 
-		.description p {
-			color: $color__text-medium;
+		div[itemprop="description"] {
+			font-size: 14px; 
 		}
 
 		.cart {
@@ -52,9 +68,9 @@
 			button {
 				background-color: $color__primary-accent;
 				border-radius: 0;
-				font-size: 14px;
-				margin-left: 15px;
-				padding: 13px 20px;
+				font-size: 13px;
+				margin-left: 6px;
+				padding: 14px 20px 13px;
 				text-transform: uppercase;
 
 				&:hover {
@@ -95,7 +111,8 @@
 					width: 40px;
 
 					&:hover {
-						background: darken( #f9f9f9, 20%);
+						color: #fff; 
+						background: $color__text-medium;
 					}
 				}
 
@@ -111,6 +128,7 @@
 
 		.product_meta {
 			border-bottom: 1px solid $color__background-hr;
+			font-size: 14px; 
 			padding: 30px 0;
 
 			span {
@@ -125,7 +143,9 @@
 	}
 
 	.images {
+
 		.product-images-slider {
+			border: 0;
 			margin-bottom: 20px;
 		}
 
@@ -184,6 +204,13 @@
 					box-shadow: none;
 				}
 			}
+		}
+	}
+
+	.related {
+		
+		h2 {
+			font-size: 20px;
 		}
 	}
 }
