--- a/woocommerce.css
+++ b/woocommerce.css
@@ -221,6 +221,11 @@
       color: #2d2d2d; }
       .woocommerce ul.products li.product .loop-product-thumbnail .add_to_cart_button:hover {
         border: 2px solid #2d2d2d; }
+      .woocommerce ul.products li.product .loop-product-thumbnail .add_to_cart_button.loading:after {
+        margin-left: .53em;
+        position: relative;
+        right: 0;
+        top: 0; }
     .woocommerce ul.products li.product .loop-product-thumbnail .product-quick-view-button {
       background: transparent;
       border: 2px solid #fff;
